--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>App de Ordem de Serviço</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="pesquisa.png" type="image/x-icon">
     <!-- Adicione o link para a biblioteca jsPDF -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js" integrity="sha384-NaWTHo/8YCBYJ59830LTz/P4aQZK1sS0SneOgAvhsIl3zBu8r9RevNg5lHCHAuQ/" crossorigin="anonymous"></script>
 </head>
@@ -16,7 +17,7 @@
     <div class="form-container">
         <div class="form">
             <div class="logoApp">
-                <img src="/img/DKCELL.png" alt="">
+                <img src="img/DKCELL.png" alt="">
                 <span class="heading">Ordem de Serviço</span>
             </div>
             <input placeholder="valor do serviço: " type="number" id="valorServico" class="input">
