--- a/index.html
+++ b/index.html
@@ -23,11 +23,16 @@
             <input placeholder="valor do serviço: " type="number" id="valorServico" class="input">
             <input placeholder="Cliente:" type="text" id="cliente" class="input">
             <input placeholder="telefone:" type="text" id="phone" class="input">
-            <div class="input">
-                <label for="entrada" class="data">data entrada:</label>
-                <input type="date" id="entrada">
-                <label class="saida data" for="">previsão saida:</label>
-                <input type="date" id="saida">
+            <div>
+                <div class="input">
+                 <label for="entrada" class="data">data entrada:</label>
+                 <input type="date" id="entrada">   
+                </div>
+                <div class="input">
+                 <label class="saida data" for="">previsão saida:</label>
+                 <input type="date" id="saida">   
+                </div>
+                
             </div>
             <input placeholder="Marca do aparelho:" type="text" id="marca" class="input">
             <input placeholder="Modelo do aparelho:" type="text" id="modelo" class="input">
