--- a/index.html
+++ b/index.html
@@ -27,30 +27,54 @@
             <input placeholder="quantidade de crianças no endereço:" type="number" id="quantidadeCriancas" class="input">
             <div class="child-info">
                 <input placeholder="Nome da Criança: " type="text" class="input Ncrianca" id="nomeCrianca1">
-                <input placeholder="Sexo:" type="text" class="input sexoCrianca" id="sexoCrianca1">
+                <select class="input sexoCrianca" id="sexoCrianca1">
+                    <option value="" disabled selected>Sexo :</option>
+                    <option value="Masculino">Masculino</option>
+                    <option value="Feminino">Feminino</option>
+
+                </select>
                 <input placeholder="Idade: " type="number" class="input idadeCrianca" id="idadeCrianca1">
             </div>
             <div class="child-info">
                 <input placeholder="Nome da Criança: " type="text" class="input Ncrianca" id="nomeCrianca2">
-                <input placeholder="Sexo:" type="text" class="input sexoCrianca" id="sexoCrianca2">
+                <select class="input sexoCrianca" id="sexoCrianca2">
+                    <option value="" disabled selected>Sexo :</option>
+                    <option value="Masculino">Masculino</option>
+                    <option value="Feminino">Feminino</option>
+
+                </select>
 
                 <input placeholder="Idade: " type="number" class="input idadeCrianca" id="idadeCrianca2">
 
             </div>
             <div class="child-info">
                 <input placeholder="Nome da Criança: " type="text" class="input Ncrianca" id="nomeCrianca3">
-                <input placeholder="Sexo:" type="text" class="input sexoCrianca" id="sexoCrianca3">
+                <select class="input sexoCrianca" id="sexoCrianca3">
+                    <option value="" disabled selected>Sexo :</option>
+                    <option value="Masculino">Masculino</option>
+                    <option value="Feminino">Feminino</option>
+
+                </select>
 
                 <input placeholder="Idade: " type="number" class="input idadeCrianca" id="idadeCrianca3">
             </div>
             <div class="child-info">
                 <input placeholder="Nome da Criança: " type="text" class="input Ncrianca" id="nomeCrianca4">
-                <input placeholder="Sexo:" type="text" class="input sexoCrianca" id="sexoCrianca4">
+                <select class="input sexoCrianca" id="sexoCrianca4">
+                    <option value="" disabled selected>Sexo :</option>
+                    <option value="Masculino">Masculino</option>
+                    <option value="Feminino">Feminino</option>
+
+                </select>
                 <input placeholder="Idade: " type="number" class="input idadeCrianca" id="idadeCrianca4">
             </div>
             <div class="child-info">
                 <input placeholder="Nome da Criança: " type="text" class="input Ncrianca" id="nomeCrianca5">
-                <input placeholder="Sexo:" type="text" class="input sexoCrianca" id="sexoCrianca5">
+                <select class="input sexoCrianca" id="sexoCrianca5">
+                    <option value="" disabled selected>Sexo :</option>
+                    <option value="MasculinoM">Masculino</option>
+                    <option value="Feminino">Feminino</option>
+                </select>
                 <input placeholder="Idade: " type="number" class="input idadeCrianca" id="idadeCrianca5">
             </div>
             <div class="button-container">
